2011-02-22  Luiz Agostini  <luiz.agostini@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] <select>s on http://www.ryanair.com render wrong
        https://bugs.webkit.org/show_bug.cgi?id=29647

        Reducing padding in <select> elements to improve its rendering and introducing a
        rendering adjustment specific to QMacStyle.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::setPopupPadding):
        (WebCore::RenderThemeQt::paintMenuList):

Canonical link: https://commits.webkit.org/69327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79407 268f45cc-cd09-0410-ab3c-d52691b4dbfc